# localgpt

./: .dockerignore  .gitignore  20260210_changes.md  Cargo.toml  README.md  build-egui-web.sh  config.example.toml  docusaurus.config.js  docusaurus.config.ts  package-lock.json  package.json  pr-body.md  remaining_implementation_migration.md
.firebase/: hosting.YnVpbGQ.cache
.github/workflows/: ci.yml  deploy-website.yml
crates/bridge/: Cargo.toml
crates/bridge/src/: lib.rs  peer_identity.rs  protocol.rs
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: paths.rs
crates/sandbox/src/: linux.rs
crates/server/: Cargo.toml
crates/server/src/: http.rs  lib.rs
crates/server/src/web/: app.rs  mod.rs
crates/server/ui/: egui.html
crates/server/ui/egui/: README.md
docs/: RFC-LocalGPT-Security-Policy.md  configuration.md  egui-web-implementation-summary.md  egui-web-poc.md  egui-web-ui-layout.md  installation.md  intro.md  localgpt.md  sandbox.md  tools.md
src/: main.rs
src/agent/: hardcoded_filters.rs  mod.rs  providers.rs  secret_scanner.rs  session.rs  system_prompt.rs  tool_filters.rs  tools.rs
src/agent/tools/: mod.rs
src/cli/: ask.rs  chat.rs  daemon.rs  md.rs  memory.rs  mod.rs  search.rs
src/components/HomepageFeatures/: index.tsx
src/config/: mod.rs
src/css/: custom.css
src/heartbeat/: runner.rs
src/memory/: embeddings.rs  index.rs  mod.rs  watcher.rs  workspace.rs
src/sandbox/: macos.rs
src/security/: audit.rs
src/server/: auth.rs  http.rs  mod.rs  telegram.rs
website/: README.md
(+12 files in other folders)
